added new sql queries

--- a/app/sql_python_test.ipynb
+++ b/app/sql_python_test.ipynb
@@ -24,16 +24,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "yay\n",
-      "11.2.0.4.0\n",
-      "(20080808, 'The 2008 Summer Olympics starts with the 2008 Summer Olympics Opening Ceremony at the Beijing National Stadium. (The Christian Science Monitor)')\n"
+     "ename": "SyntaxError",
+     "evalue": "EOL while scanning string literal (<ipython-input-6-9d34a7a2b983>, line 21)",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;36m  File \u001b[0;32m\"<ipython-input-6-9d34a7a2b983>\"\u001b[0;36m, line \u001b[0;32m21\u001b[0m\n\u001b[0;31m    WHERE dateID = 20060323) a \\\u001b[0m\n\u001b[0m                                 \n^\u001b[0m\n\u001b[0;31mSyntaxError\u001b[0m\u001b[0;31m:\u001b[0m EOL while scanning string literal\n"
      ]
     }
    ],
@@ -55,7 +54,16 @@
     "    connection.close()\n",
     "\n",
     "c = connection.cursor() \n",
-    "c.execute('SELECT * FROM History WHERE dateID = 20080808')\n",
+    "c.execute('WITH Sears AS (SELECT (SHLDQ/AMOUNT) as adjusted_sears FROM (SELECT dateID, SHLDQ FROM Stocks s WHERE dateID = 20060323) a JOIN Dates d ON a.dateID = d.dateID \\\n",
+    "JOIN Inflation i ON d.Year = i.Year), \\\n",
+    "Valentino AS (SELECT (Valentino/AMOUNT) as adjusted_valentino \\\n",
+    "FROM (SELECT dateID, Valentino \\\n",
+    "FROM Commodities c \\\n",
+    "WHERE dateID = 20060323) a \\\n",
+    "JOIN Dates d ON a.dateID = d.dateID \\\n",
+    "JOIN Inflation i ON d.Year = i.Year) \\\n",
+    "SELECT GREATEST(v.adjusted_valentino, s.adjusted_sears) as higher_value \\\n",
+    "FROM Sears s, Valentino v;') \n",
     "for i in c:\n",
     "    print(i)"
    ]
@@ -84,7 +92,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.6"
+   "version": "3.6.8"
   }
  },
  "nbformat": 4,
