--- a/app/sql_python_test.ipynb
+++ b/app/sql_python_test.ipynb
@@ -24,7 +24,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 99,
+   "execution_count": 20,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "query = \"SELECT d.desr FROM Descriptions d WHERE d.itemID = 'AAPL'\""
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 21,
    "metadata": {},
    "outputs": [
     {
@@ -33,7 +42,7 @@
      "text": [
       "yay\n",
       "11.2.0.4.0\n",
-      "(102.70123769084832, 17.067)\n"
+      "('Apple Inc. is an American multinational technology company headquartered in Cupertino, California, that designs, develops, and sells consumer electronics, computer software, and online services. It is considered one of the Big Four technology companies, alongside Amazon, Google, and Microsoft.',)\n"
      ]
     }
    ],
