--- a/app/sql_python_test.ipynb
+++ b/app/sql_python_test.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -11,7 +11,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -24,16 +24,29 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 6,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "SELECT COUNT(Stocks.dateID) FROM Stocks JOIN Commodities ON Stocks.dateID = Commodities.dateID JOIN Indexes ON Stocks.dateID = Indexes.dateID WHERE Exists (SELECT dateID, SP FROM Stocks s WHERE DateID >= 20100101) AND AAPL <> 0 AND Stocks.DateID >= 20100101 AND Stocks.AAPL - indexes.SP < 0.1\n"
+     ]
+    }
+   ],
    "source": [
-    "query = \"SELECT d.desr FROM Descriptions d WHERE d.itemID = 'AAPL'\""
+    "item = \"SP\"\n",
+    "kind = \"indexes\"\n",
+    "query = \"SELECT COUNT(Stocks.dateID) FROM Stocks JOIN Commodities ON Stocks.dateID = Commodities.dateID \" + \\\n",
+    "\"JOIN Indexes ON Stocks.dateID = Indexes.dateID WHERE Exists (SELECT dateID, \" + item + \" FROM Stocks s WHERE \" + \\\n",
+    "\"DateID >= 20100101) AND AAPL <> 0 AND Stocks.DateID >= 20100101 AND Stocks.AAPL - \" + kind + \".\" + item + \" < 0.1\"\n",
+    "print(query)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -42,7 +55,7 @@
      "text": [
       "yay\n",
       "11.2.0.4.0\n",
-      "('Apple Inc. is an American multinational technology company headquartered in Cupertino, California, that designs, develops, and sells consumer electronics, computer software, and online services. It is considered one of the Big Four technology companies, alongside Amazon, Google, and Microsoft.',)\n"
+      "2573\n"
      ]
     }
    ],
@@ -65,8 +78,7 @@
     "\n",
     "c = connection.cursor() \n",
     "c.execute(query) \n",
-    "for i in c:\n",
-    "    print(i)"
+    "print([str(i[0]) for i in c][0])"
    ]
   },
   {
